; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_seafile-session.c_generate_client_id.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_seafile-session.c_generate_client_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @generate_client_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @generate_client_id() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca [20 x i8], align 16
  %3 = alloca [41 x i8], align 16
  %4 = call i8* (...) @gen_uuid()
  store i8* %4, i8** %1, align 8
  %5 = getelementptr inbounds [20 x i8], [20 x i8]* %2, i64 0, i64 0
  %6 = load i8*, i8** %1, align 8
  %7 = call i32 @calculate_sha1(i8* %5, i8* %6, i32 20)
  %8 = getelementptr inbounds [20 x i8], [20 x i8]* %2, i64 0, i64 0
  %9 = getelementptr inbounds [41 x i8], [41 x i8]* %3, i64 0, i64 0
  %10 = call i32 @rawdata_to_hex(i8* %8, i8* %9, i32 20)
  %11 = load i8*, i8** %1, align 8
  %12 = call i32 @g_free(i8* %11)
  %13 = getelementptr inbounds [41 x i8], [41 x i8]* %3, i64 0, i64 0
  %14 = call i8* @g_strdup(i8* %13)
  ret i8* %14
}

declare dso_local i8* @gen_uuid(...) #1

declare dso_local i32 @calculate_sha1(i8*, i8*, i32) #1

declare dso_local i32 @rawdata_to_hex(i8*, i8*, i32) #1

declare dso_local i32 @g_free(i8*) #1

declare dso_local i8* @g_strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
